// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> Should match the bullet list snapshot 1`] = `
.c3 {
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 16px;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: count;
}

.c0 li {
  margin-left: 24px;
  position: relative;
}

.c0 li:before {
  content: counter(count) '.';
  counter-increment: count;
  position: absolute;
  right: 100%;
  margin-top: 8px;
  margin-right: 8px;
}

<List
  bullet=""
  divided={false}
  inline={false}
  items={
    Array [
      "Tomato sauce",
      "Mustard",
      "Barbecue sauce",
      "Red-wine vinegar",
      "Salsa",
      "Hot pepper sauce",
    ]
  }
  ordered={true}
>
  <OrderedList
    bullet=""
    divided={false}
    inline={false}
    items={
      Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ]
    }
    ordered={true}
  >
    <StyledComponent
      bullet=""
      divided={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "List__Ordered-sc-283kd7-1",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "margin:0;padding:0;list-style:none;counter-reset:count;li{margin-left:24px;position:relative;&:before{content:counter(count) '.';counter-increment:count;position:absolute;right:100%;margin-top:8px;margin-right:8px;}}",
              [Function],
              " ",
              [Function],
              ";",
            ],
          },
          "displayName": "OrderedList",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "List__Ordered-sc-283kd7-1",
          "target": "ol",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={false}
      items={
        Array [
          "Tomato sauce",
          "Mustard",
          "Barbecue sauce",
          "Red-wine vinegar",
          "Salsa",
          "Hot pepper sauce",
        ]
      }
      ordered={true}
    >
      <ol
        className="c0"
      >
        <List.Item
          bullet=""
          content="Tomato sauce"
          icon=""
          key="Tomato sauce"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Tomato sauce"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Tomato sauce
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Mustard"
          icon=""
          key="Mustard"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Mustard"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Mustard
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Barbecue sauce"
          icon=""
          key="Barbecue sauce"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Barbecue sauce"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Barbecue sauce
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Red-wine vinegar"
          icon=""
          key="Red-wine vinegar"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Red-wine vinegar"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Red-wine vinegar
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Salsa"
          icon=""
          key="Salsa"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Salsa"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Salsa
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Hot pepper sauce"
          icon=""
          key="Hot pepper sauce"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Hot pepper sauce"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Hot pepper sauce
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
      </ol>
    </StyledComponent>
  </OrderedList>
</List>
`;

exports[`<List /> Should match the default snapshot 1`] = `
.c0 {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

<List
  bullet=""
  divided={false}
  inline={false}
  items={Array []}
  ordered={false}
>
  <UnorderedList
    bullet=""
    divided={false}
    inline={false}
    items={Array []}
    ordered={false}
  >
    <StyledComponent
      bullet=""
      divided={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "List__Unordered-sc-283kd7-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "list-style:none;margin:0;",
              [Function],
              " ",
              [Function],
              " ",
              [Function],
            ],
          },
          "displayName": "UnorderedList",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "List__Unordered-sc-283kd7-0",
          "target": "ul",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={false}
      items={Array []}
      ordered={false}
    >
      <ul
        className="c0"
      />
    </StyledComponent>
  </UnorderedList>
</List>
`;

exports[`<List /> Should match the divided list snapshot 1`] = `
.c3 {
  margin-top: 4px;
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 16px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

.c0 li {
  border-bottom: 1px solid #eceff1;
}

.c0 li:last-child {
  border: none;
}

<List
  bullet=""
  divided={true}
  inline={false}
  items={
    Array [
      "Tomato sauce",
      "Mustard",
      "Barbecue sauce",
      "Red-wine vinegar",
      "Salsa",
      "Hot pepper sauce",
    ]
  }
  ordered={false}
>
  <UnorderedList
    bullet=""
    divided={true}
    inline={false}
    items={
      Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ]
    }
    ordered={false}
  >
    <StyledComponent
      bullet=""
      divided={true}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "List__Unordered-sc-283kd7-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "list-style:none;margin:0;",
              [Function],
              " ",
              [Function],
              " ",
              [Function],
            ],
          },
          "displayName": "UnorderedList",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "List__Unordered-sc-283kd7-0",
          "target": "ul",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={false}
      items={
        Array [
          "Tomato sauce",
          "Mustard",
          "Barbecue sauce",
          "Red-wine vinegar",
          "Salsa",
          "Hot pepper sauce",
        ]
      }
      ordered={false}
    >
      <ul
        className="c0"
      >
        <List.Item
          bullet=""
          content="Tomato sauce"
          icon=""
          key="Tomato sauce"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Tomato sauce"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Tomato sauce
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Mustard"
          icon=""
          key="Mustard"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Mustard"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Mustard
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Barbecue sauce"
          icon=""
          key="Barbecue sauce"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Barbecue sauce"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Barbecue sauce
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Red-wine vinegar"
          icon=""
          key="Red-wine vinegar"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Red-wine vinegar"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Red-wine vinegar
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Salsa"
          icon=""
          key="Salsa"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Salsa"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Salsa
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
        <List.Item
          bullet=""
          content="Hot pepper sauce"
          icon=""
          key="Hot pepper sauce"
        >
          <li>
            <ListItem
              bullet=""
            >
              <StyledComponent
                bullet=""
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Item__ListItem-culzzj-1",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "display:flex;flex-direction:row;align-items:center;padding:10px 16px;",
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "ListItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Item__ListItem-culzzj-1",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c1"
                >
                  <List.Content
                    content="Hot pepper sauce"
                    header=""
                    subheader=""
                  >
                    <Content>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Content__ContentBox-sc-1fmj11p-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:flex;flex-direction:column;",
                              ],
                            },
                            "displayName": "Content",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Content__ContentBox-sc-1fmj11p-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <List.Header>
                            <Header>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Header__Title-e8ruju-0",
                                      "isStatic": true,
                                      "lastClassName": "c3",
                                      "rules": Array [
                                        "margin-top:4px;margin-bottom:4px;",
                                      ],
                                    },
                                    "displayName": "Header",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Header__Title-e8ruju-0",
                                    "target": "span",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <span
                                  className="c3"
                                >
                                  Hot pepper sauce
                                </span>
                              </StyledComponent>
                            </Header>
                          </List.Header>
                        </div>
                      </StyledComponent>
                    </Content>
                  </List.Content>
                </div>
              </StyledComponent>
            </ListItem>
          </li>
        </List.Item>
      </ul>
    </StyledComponent>
  </UnorderedList>
</List>
`;
